hobbies name correction

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
 
-<a href="Hobbies.html">My Hobbies</a> <br><hr>
+<a href="hobbies.html">My Hobbies</a> <br><hr>
 <a href="Contact Details.html">Contact Details</a><hr>
 
 
