changed the link
to my image - now the website will display my own image.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="40">
     <tr>
-      <td><img src="images/World-Lion-Day-modified.png" alt="Image Of Lion"/></td>
+      <td><img src="images/myself-image.png" alt="Image Of Lion"/></td>
       <td><h1>Syed Rahman</h1>
 
         <p><em>I've started learning <strong><a href="https://www.appbrewery.co/">Web Development With Angela</a></strong></em></p>
